# suci-ven911

./: .env.example  .gitignore  .goutputstream-GOCCV2  CHANGELOG.md  Dockerfile  ISSUES.md  Pendientes.md  README.md  docker-compose.yml  requirements.txt  setup.cfg
doc/: DOCKER_README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_STANDARDS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DIAGRAMS.md  DOCKER_README.md  QUICKSTART.md  SECURITY.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  USER_MANUAL.md  documentacion_tecnica.md
suci/: manage.py  middleware.py  (+4 more)
suci/gestion-comunicacional/: LICENSE  MANIFEST.in  README.rst  admin.py  apps.py  forms.py  models.py  setup.cfg  urls.py  views.py
suci/gestion-comunicacional/controllers/: index.py
suci/gestion-comunicacional/controllers/social-media/: listingAccount.py
suci/gestion-comunicacional/migrations/: 0001_initial.py
suci/gestion-comunicacional/social-media/controllers/: SocialMediaAccountController.py
suci/gestion-comunicacional/social-media/entities/: SocialActivityEntity.py  SocialMediaAccountEntity.py
suci/gestion-comunicacional/social-media/repositories/: SocialMediaPostRepository.py
suci/gestion-comunicacional/social_media/entities/: SocialMediaPostEntity.py
suci/gestion-comunicacional/social_media/forms/: SocialMediaAccountForm.py
suci/gestion-comunicacional/social_media/repositories/: SocialMediaAccountRepository.py
suci/gestion-comunicacional/social_media/services/: SocialMediaAccountService.py  SocialMediaPostService.py
suci/gestion-comunicacional/utils/: PaginatorUtil.py
(+1117 files in other folders)
