[metadata]
name = gestion-comunicacional
version = 0.0.1
description = A Django application to record web-based communication management processes in SUCI Ven911.
long_description = file: README.rst
url = https://www.example.com/
author = Eruck Perez | DOS | TRES | Cuatro
author_email = erickjpl@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12.3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0.1